# homeassistant-frontend

./: .eslintrc.json  .gitignore  lint-staged.config.js  package.json  pyproject.toml
.devcontainer/: devcontainer.json
build-scripts/: webpack.cjs
cast/: README.md
cast/public/: manifest.json
cast/src/html/: _social_meta.html.template  faq.html.template  index.html.template
demo/src/html/: index.html.template
gallery/src/: ha-gallery.ts
gallery/src/data/: demo_states.js
gallery/src/html/: index.html.template
hassio/src/: hassio-main.ts
hassio/src/components/: hassio-upload-backup.ts  supervisor-backup-content.ts
hassio/src/dashboard/: hassio-update.ts
hassio/src/system/: hassio-core-info.ts
hassio/src/update-available/: update-available-card.ts
script/: core  release
src/cast/: sender_messages.ts
src/common/util/: time-cache-function-promise.ts
src/components/: ha-conversation-agent-picker.ts  ha-logo-svg.ts  ha-sidebar.ts  ha-theme-picker.ts
src/data/: automation_i18n.ts  onboarding.ts  trace.ts  update.ts
src/dialogs/voice-assistant-setup/: voice-assistant-setup-step-addons.ts  voice-assistant-setup-step-check.ts  voice-assistant-setup-step-cloud.ts  (+1 more)
src/entrypoints/: service-worker.ts
src/fake_data/: demo_services.ts  provide_hass.ts
src/html/: authorize.html.template  index.html.template  onboarding.html.template
src/layouts/: ha-init-page.ts  home-assistant.ts
src/onboarding/: ha-onboarding.ts
src/resources/: ha-style.ts
src/state/: disconnect-toast-mixin.ts  panel-title-mixin.ts
src/translations/: en.json
(+24 files in other folders)
