[build-system]
requires = ["setuptools~=68.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "ks-assistant-frontend"
version      = "20241024.1"
license      = {text = "Apache-2.0"}
description  = "The KS Assistant frontend"
readme       = "README.md"
authors      = [
    {name = "The KS Assistant Authors", email = "hello@home-assistant.io"}
]
requires-python = ">=3.11.0"

[project.urls]
"Homepage" = "https://github.com/CNWenwuGong/homeassistant-frontend"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["hass_frontend*"]
